--- a/css/output.css
+++ b/css/output.css
@@ -12,7 +12,7 @@ body {
   font-family: 'Ek Mukta', sans-serif;
   font-weight: 300;
   font-size: 1rem;
-  color: #E9F0CA; }
+  color: #FCFEE5; }
 
 main {
   height: 100%;
@@ -39,7 +39,7 @@ button {
   font-family: 'Ek Mukta', sans-serif;
   font-size: 1rem;
   font-weight: 300;
-  background: #E9F0CA;
+  background: #FCFEE5;
   color: #060605;
   border: 4px solid #BA7619;
   outline: none; }
@@ -90,7 +90,10 @@ button[disabled]::after {
 .container {
   margin: 0 auto;
   width: 70%;
-  height: 100%; }
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
 
 .messages {
   height: 100px;
@@ -99,12 +102,12 @@ button[disabled]::after {
   justify-content: center; }
 
 .table h1 {
-  margin-top: 15px; }
+  margin: 15px 0; }
 
 .dealer,
 .player {
   width: 50%;
-  height: 500px;
+  height: 385px;
   float: left;
   display: flex;
   flex-direction: column;
@@ -119,40 +122,48 @@ button[disabled]::after {
 .player-hand {
   margin: 0 auto;
   position: relative;
-  height: 300px;
-  width: 60%; }
+  height: 250px;
+  width: 80%; }
 
 .card {
   height: 100%;
   position: absolute;
   right: -50%; }
 
+.card-dd {
+  transform: rotate(45deg);
+  left: 70px !important; }
+
 .card:first-child {
   left: 0; }
 
 .card:nth-child(2) {
-  left: 70px; }
+  left: 50px; }
 
 .card:nth-child(3) {
-  left: 140px; }
+  left: 100px; }
 
 .card:nth-child(4) {
-  left: 210px; }
+  left: 150px; }
 
 .card:nth-child(5) {
-  left: 280px; }
+  left: 200px; }
 
 .card:nth-child(6) {
-  left: 350px; }
+  left: 250px; }
 
 .card:nth-child(7) {
-  left: 420px; }
+  left: 300px; }
 
 .card:nth-child(8) {
-  left: 490px; }
+  left: 350px; }
 
 .card:nth-child(9) {
-  left: 560px; }
+  left: 400px; }
+
+.action-wrap {
+  margin: 0 auto;
+  width: 80%; }
 
 .betting,
 .game-actions {
@@ -174,9 +185,6 @@ button[disabled]::after {
   margin-bottom: 5px;
   position: relative; }
 
-.height-equalizer {
-  margin-top: 90px; }
-
 .money h3 {
   display: inline-block; }
 
@@ -193,7 +201,7 @@ button[disabled]::after {
 
 .modal-guts {
   position: absolute;
-  background: #E9F0CA;
+  background: #FCFEE5;
   color: #060605;
   top: 0;
   left: 0;
@@ -226,6 +234,49 @@ MEDIA QUERIES
     font-size: 125%; } }
 @media screen and (min-width: 1200px) {
   html {
-    font-size: 150%; } }
+    font-size: 125%; }
+
+  .dealer-hand,
+  .player-hand {
+    height: 250px;
+    width: 80%; } }
+@media screen and (min-width: 1600px) {
+  html {
+    font-size: 150%; }
+
+  .dealer-hand,
+  .player-hand {
+    height: 300px;
+    width: 60%; }
+
+  .card:first-child {
+    left: 0; }
+
+  .card:nth-child(2) {
+    left: 70px; }
+
+  .card:nth-child(3) {
+    left: 140px; }
+
+  .card:nth-child(4) {
+    left: 210px; }
+
+  .card:nth-child(5) {
+    left: 280px; }
+
+  .card:nth-child(6) {
+    left: 350px; }
+
+  .card:nth-child(7) {
+    left: 420px; }
+
+  .card:nth-child(8) {
+    left: 490px; }
+
+  .card:nth-child(9) {
+    left: 560px; }
+
+  .action-wrap {
+    width: 70%; } }
 
 /*# sourceMappingURL=output.css.map */
